<resources>
    <string name="app_name">canilleras</string>
    <string name="iniciar">iniciar</string>
    <string name="logo">Logo Area Nueve Personalizate</string>
    <string name="triangulo">triangulo</string>
    <string name="nueva_canillera">Nueva Canillera</string>
    <string name="tutorial">Tutorial</string>
    <string name="preparar_impresi_n">Preparar Impresión</string>
    <string name="modificar_dise_o">Modificar Diseño</string>
    <string name="cargar_dise_o">Cargar Diseño</string>
    <string name="codigo_qr_invalido">Código QR inválido</string>
    <string name="cancelado">Cancelado</string>
    <string name="escanee_el_c_digo_qr_de_la_caja">Escaneá el código QR de la caja</string>
    <string name="o_el_jalo_de_aqu">… o elegí un tipo de canillera de acá</string>
    <string name="reintent_escanear_el_c_digo_qr">Reintentá escanear\nel código QR</string>
    <string name="o_eleg_una_ac">… o elegí un modelo\npresionando acá</string>
    <string name="cambiar_modelo">Cambiar Modelo</string>
    <string name="elija_un_tipo">Elegí un Modelo</string>
    <string name="seleccionado">Seleccionado:</string>
    <string name="cargar">Cargar</string>
    <string name="imprimir">Imprimir</string>
    <string name="guardar">Guardar</string>
    <string name="select_color">Elija un color</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="select_font">Elija tipografía</string>
    <string name="como_editar">Como editar</string>
</resources>

