<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.eviera.canilleras.BORRAR_MenuActivity">

    <include
        android:id="@+id/logo"
        layout="@layout/include_logo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNueva"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/nueva_canillera"
        android:theme="@style/boton"
        app:layout_constraintBottom_toTopOf="@+id/btnCargar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnCargar"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/cargar_dise_o"
        android:theme="@style/boton"
        app:layout_constraintBottom_toTopOf="@+id/btnCambiarModelo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNueva" />

    <Button
        android:id="@+id/btnCambiarModelo"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:onClick="cambiarModelo"
        android:text="@string/cambiar_modelo"
        android:theme="@style/boton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCargar" />

</android.support.constraint.ConstraintLayout>
