<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="net.eviera.canilleras.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logo_blanco"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/btnIniciar"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/fondoBotones"
        android:clickable="true"
        android:drawableStart="@drawable/triangle"
        android:focusable="true"
        android:fontFamily="@font/allerta"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@android:color/white"
        android:text="@string/iniciar"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15104167" />

    <ImageView
        android:id="@+id/triangulo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:rotation="-90"
        app:layout_constraintBottom_toBottomOf="@+id/btnIniciar"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/btnIniciar"
        app:srcCompat="@drawable/triangle"
        android:contentDescription="@string/triangulo" />

</android.support.constraint.ConstraintLayout>
